; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_cm.c_mini_cm_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_cm.c_mini_cm_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_cm_core = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nes_cm_core*, i32, i32)* @mini_cm_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mini_cm_set(%struct.nes_cm_core* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nes_cm_core*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.nes_cm_core* %0, %struct.nes_cm_core** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %17 [
    i32 128, label %9
    i32 129, label %13
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.nes_cm_core*, %struct.nes_cm_core** %4, align 8
  %12 = getelementptr inbounds %struct.nes_cm_core, %struct.nes_cm_core* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  br label %20

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.nes_cm_core*, %struct.nes_cm_core** %4, align 8
  %16 = getelementptr inbounds %struct.nes_cm_core, %struct.nes_cm_core* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  br label %20

17:                                               ; preds = %3
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %7, align 4
  br label %20

20:                                               ; preds = %17, %13, %9
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
